template/js/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root, factory) {
	if (typeof define === "function" && define.amd) {
		define([], factory);
	} else if (typeof module === "object" && module.exports) {
		module.exports = factory();
	} else {
		root.pegjs = factory();
	}
})(this, function() {
	"use strict";

	function peg$subclass(child, parent) {
		function ctor() { this.constructor = child; }
		ctor.prototype = parent.prototype;
		child.prototype = new ctor();
	}

	function peg$SyntaxError(message, expected, found, location) {
		this.message	= message;
		this.expected = expected;
		this.found		= found;
		this.location = location;
		this.name		 = "SyntaxError";

		if (typeof Error.captureStackTrace === "function") {
			Error.captureStackTrace(this, peg$SyntaxError);
		}
	}

	peg$subclass(peg$SyntaxError, Error);

	peg$SyntaxError.buildMessage = function(expected, found) {
		var DESCRIBE_EXPECTATION_FNS = {
					literal: function(expectation) {
						return "\"" + literalEscape(expectation.text) + "\"";
					},

					"class": function(expectation) {
						var escapedParts = "",
								i;

						for (i = 0; i < expectation.parts.length; i++) {
							escapedParts += expectation.parts[i] instanceof Array
								? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
								: classEscape(expectation.parts[i]);
						}

						return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
					},

					any: function(expectation) {
						return "any character";
					},

					end: function(expectation) {
						return "end of input";
					},

					other: function(expectation) {
						return expectation.description;
					}
				};

		function hex(ch) {
			return ch.charCodeAt(0).toString(16).toUpperCase();
		}

		function literalEscape(s) {
			return s
				.replace(/\\/g, '\\\\')
				.replace(/"/g,	'\\"')
				.replace(/\0/g, '\\0')
				.replace(/\t/g, '\\t')
				.replace(/\n/g, '\\n')
				.replace(/\r/g, '\\r')
				.replace(/[\x00-\x0F]/g,					function(ch) { return '\\x0' + hex(ch); })
				.replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'	+ hex(ch); });
		}

		function classEscape(s) {
			return s
				.replace(/\\/g, '\\\\')
				.replace(/\]/g, '\\]')
				.replace(/\^/g, '\\^')
				.replace(/-/g,	'\\-')
				.replace(/\0/g, '\\0')
				.replace(/\t/g, '\\t')
				.replace(/\n/g, '\\n')
				.replace(/\r/g, '\\r')
				.replace(/[\x00-\x0F]/g,					function(ch) { return '\\x0' + hex(ch); })
				.replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'	+ hex(ch); });
		}

		function describeExpectation(expectation) {
			return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
		}

		function describeExpected(expected) {
			var descriptions = new Array(expected.length),
					i, j;

			for (i = 0; i < expected.length; i++) {
				descriptions[i] = describeExpectation(expected[i]);
			}

			descriptions.sort();

			if (descriptions.length > 0) {
				for (i = 1, j = 1; i < descriptions.length; i++) {
					if (descriptions[i - 1] !== descriptions[i]) {
						descriptions[j] = descriptions[i];
						j++;
					}
				}
				descriptions.length = j;
			}

			switch (descriptions.length) {
				case 1:
					return descriptions[0];

				case 2:
					return descriptions[0] + " or " + descriptions[1];

				default:
					return descriptions.slice(0, -1).join(", ")
						+ ", or "
						+ descriptions[descriptions.length - 1];
			}
		}

		function describeFound(found) {
			return found ? "\"" + literalEscape(found) + "\"" : "end of input";
		}

		return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
	};

	function peg$parse(input, options) {
		options = options !== void 0 ? options : {};

		var peg$FAILED = {},

				peg$startRuleFunctions = { Expression: peg$parseExpression },
				peg$startRuleFunction	= peg$parseExpression,

				peg$c0 = "&&",
				peg$c1 = peg$literalExpectation("&&", false),
				peg$c2 = "||",
				peg$c3 = peg$literalExpectation("||", false),
				peg$c4 = function(head, tail) {
							return tail.reduce(function(result, element) {
								return result + element[0] + element[1];
							}, head);
						},
				peg$c5 = "&",
				peg$c6 = peg$literalExpectation("&", false),
				peg$c7 = "|",
				peg$c8 = peg$literalExpectation("|", false),
				peg$c9 = "^",
				peg$c10 = peg$literalExpectation("^", false),
				peg$c11 = "==",
				peg$c12 = peg$literalExpectation("==", false),
				peg$c13 = "!=",
				peg$c14 = peg$literalExpectation("!=", false),
				peg$c15 = "<=",
				peg$c16 = peg$literalExpectation("<=", false),
				peg$c17 = "<",
				peg$c18 = peg$literalExpectation("<", false),
				peg$c19 = ">=",
				peg$c20 = peg$literalExpectation(">=", false),
				peg$c21 = ">",
				peg$c22 = peg$literalExpectation(">", false),
				peg$c23 = "+",
				peg$c24 = peg$literalExpectation("+", false),
				peg$c25 = "-",
				peg$c26 = peg$literalExpectation("-", false),
				peg$c27 = "*",
				peg$c28 = peg$literalExpectation("*", false),
				peg$c29 = "/",
				peg$c30 = peg$literalExpectation("/", false),
				peg$c31 = "%",
				peg$c32 = peg$literalExpectation("%", false),
				peg$c63 = "**",
				peg$c64 = peg$literalExpectation("**", false),
				peg$c33 = "(",
				peg$c34 = peg$literalExpectation("(", false),
				peg$c35 = ")",
				peg$c36 = peg$literalExpectation(")", false),
				peg$c37 = function(expr) { return '(' + expr + ')'; },
				peg$c38 = function(prim) { return prim; },
				peg$c39 = "!",
				peg$c40 = peg$literalExpectation("!", false),
				peg$c41 = function(prim) { return '(!' + prim + ')'; },
				peg$c42 = function(prim) { return '(-' + prim + ')'; },
				peg$c43 = function(id, args) { 
						var s = id;
						if (args) {
							if (known_methods.has(s))
								return `form.__${s}(${args[1]})`;
							if (!Math[s])
								throw Error("未知的函數: " + s);
							return `Math.${s}(${args[1]})`;
						}
						const val = constants[s];
						if (val !== undefined)
							return JSON.stringify(val);
						s = s.toLowerCase();
						if (!known_identifiers.has(s))
							throw new Error('未知的變數: ' + s);
						return `form.__${s}()`;
					},
				peg$c44 = ",",
				peg$c45 = peg$literalExpectation(",", false),
				peg$c46 = function(head, tail) {
							if (!head) return '';
							return tail.reduce(function(result, element) {
								return result + ',' + element[1];
							}, head);
						 },
				peg$c47 = peg$otherExpectation("integer"),
				peg$c48 = /^[0-9]/,
				peg$c49 = peg$classExpectation([["0", "9"]], false, false),
				peg$c50 = ".",
				peg$c51 = peg$literalExpectation(".", false),
				peg$c52 = function() { return text(); },
				peg$c53 = peg$otherExpectation("whitespace"),
				peg$c54 = /^[ \t\n\r]/,
				peg$c55 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
				peg$c56 = /^[a-z]/,
				peg$c57 = peg$classExpectation([["a", "z"]], false, false),
				peg$c58 = /^[A-Z]/,
				peg$c59 = peg$classExpectation([["A", "Z"]], false, false),
				peg$c60 = /^[_]/,
				peg$c61 = peg$classExpectation(["_"], false, false),
				peg$c62 = function() {
						let s = text().toLowerCase();
						 return s;
					},

				peg$currPos					= 0,
				peg$savedPos				 = 0,
				peg$posDetailsCache	= [{ line: 1, column: 1 }],
				peg$maxFailPos			 = 0,
				peg$maxFailExpected	= [],
				peg$silentFails			= 0,

				peg$result;

		if ("startRule" in options) {
			if (!(options.startRule in peg$startRuleFunctions)) {
				throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
			}

			peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
		}

		function text() {
			return input.substring(peg$savedPos, peg$currPos);
		}

		function location() {
			return peg$computeLocation(peg$savedPos, peg$currPos);
		}

		function expected(description, location) {
			location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

			throw peg$buildStructuredError(
				[peg$otherExpectation(description)],
				input.substring(peg$savedPos, peg$currPos),
				location
			);
		}

		function error(message, location) {
			location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

			throw peg$buildSimpleError(message, location);
		}

		function peg$literalExpectation(text, ignoreCase) {
			return { type: "literal", text: text, ignoreCase: ignoreCase };
		}

		function peg$classExpectation(parts, inverted, ignoreCase) {
			return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
		}

		function peg$anyExpectation() {
			return { type: "any" };
		}

		function peg$endExpectation() {
			return { type: "end" };
		}

		function peg$otherExpectation(description) {
			return { type: "other", description: description };
		}

		function peg$computePosDetails(pos) {
			var details = peg$posDetailsCache[pos], p;

			if (details) {
				return details;
			} else {
				p = pos - 1;
				while (!peg$posDetailsCache[p]) {
					p--;
				}

				details = peg$posDetailsCache[p];
				details = {
					line:	 details.line,
					column: details.column
				};

				while (p < pos) {
					if (input.charCodeAt(p) === 10) {
						details.line++;
						details.column = 1;
					} else {
						details.column++;
					}

					p++;
				}

				peg$posDetailsCache[pos] = details;
				return details;
			}
		}

		function peg$computeLocation(startPos, endPos) {
			var startPosDetails = peg$computePosDetails(startPos),
					endPosDetails	 = peg$computePosDetails(endPos);

			return {
				start: {
					offset: startPos,
					line:	 startPosDetails.line,
					column: startPosDetails.column
				},
				end: {
					offset: endPos,
					line:	 endPosDetails.line,
					column: endPosDetails.column
				}
			};
		}

		function peg$fail(expected) {
			if (peg$currPos < peg$maxFailPos) { return; }

			if (peg$currPos > peg$maxFailPos) {
				peg$maxFailPos = peg$currPos;
				peg$maxFailExpected = [];
			}

			peg$maxFailExpected.push(expected);
		}

		function peg$buildSimpleError(message, location) {
			return new peg$SyntaxError(message, null, null, location);
		}

		function peg$buildStructuredError(expected, found, location) {
			return new peg$SyntaxError(
				peg$SyntaxError.buildMessage(expected, found),
				expected,
				found,
				location
			);
		}

		function peg$parseExpression() {
			var s0, s1, s2, s3, s4, s5;

			s0 = peg$currPos;
			s1 = peg$parseTerm1();
			if (s1 !== peg$FAILED) {
				s2 = [];
				s3 = peg$currPos;
				if (input.substr(peg$currPos, 2) === peg$c0) {
					s4 = peg$c0;
					peg$currPos += 2;
				} else {
					s4 = peg$FAILED;
					if (peg$silentFails === 0) { peg$fail(peg$c1); }
				}
				if (s4 === peg$FAILED) {
					if (input.substr(peg$currPos, 2) === peg$c2) {
						s4 = peg$c2;
						peg$currPos += 2;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c3); }
					}
				}
				if (s4 !== peg$FAILED) {
					s5 = peg$parseTerm1();
					if (s5 !== peg$FAILED) {
						s4 = [s4, s5];
						s3 = s4;
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
				} else {
					peg$currPos = s3;
					s3 = peg$FAILED;
				}
				while (s3 !== peg$FAILED) {
					s2.push(s3);
					s3 = peg$currPos;
					if (input.substr(peg$currPos, 2) === peg$c0) {
						s4 = peg$c0;
						peg$currPos += 2;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c1); }
					}
					if (s4 === peg$FAILED) {
						if (input.substr(peg$currPos, 2) === peg$c2) {
							s4 = peg$c2;
							peg$currPos += 2;
						} else {
							s4 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c3); }
						}
					}
					if (s4 !== peg$FAILED) {
						s5 = peg$parseTerm1();
						if (s5 !== peg$FAILED) {
							s4 = [s4, s5];
							s3 = s4;
						} else {
							peg$currPos = s3;
							s3 = peg$FAILED;
						}
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
				}
				if (s2 !== peg$FAILED) {
					peg$savedPos = s0;
					s1 = peg$c4(s1, s2);
					s0 = s1;
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}

			return s0;
		}

		function peg$parseTerm1() {
			var s0, s1, s2, s3, s4, s5;

			s0 = peg$currPos;
			s1 = peg$parseTerm2();
			if (s1 !== peg$FAILED) {
				s2 = [];
				s3 = peg$currPos;
				if (input.charCodeAt(peg$currPos) === 38) {
					s4 = peg$c5;
					peg$currPos++;
				} else {
					s4 = peg$FAILED;
					if (peg$silentFails === 0) { peg$fail(peg$c6); }
				}
				if (s4 === peg$FAILED) {
					if (input.charCodeAt(peg$currPos) === 124) {
						s4 = peg$c7;
						peg$currPos++;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c8); }
					}
					if (s4 === peg$FAILED) {
						if (input.charCodeAt(peg$currPos) === 94) {
							s4 = peg$c9;
							peg$currPos++;
						} else {
							s4 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c10); }
						}
					}
				}
				if (s4 !== peg$FAILED) {
					s5 = peg$parseTerm2();
					if (s5 !== peg$FAILED) {
						s4 = [s4, s5];
						s3 = s4;
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
				} else {
					peg$currPos = s3;
					s3 = peg$FAILED;
				}
				while (s3 !== peg$FAILED) {
					s2.push(s3);
					s3 = peg$currPos;
					if (input.charCodeAt(peg$currPos) === 38) {
						s4 = peg$c5;
						peg$currPos++;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c6); }
					}
					if (s4 === peg$FAILED) {
						if (input.charCodeAt(peg$currPos) === 124) {
							s4 = peg$c7;
							peg$currPos++;
						} else {
							s4 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c8); }
						}
						if (s4 === peg$FAILED) {
							if (input.charCodeAt(peg$currPos) === 94) {
								s4 = peg$c9;
								peg$currPos++;
							} else {
								s4 = peg$FAILED;
								if (peg$silentFails === 0) { peg$fail(peg$c10); }
							}
						}
					}
					if (s4 !== peg$FAILED) {
						s5 = peg$parseTerm2();
						if (s5 !== peg$FAILED) {
							s4 = [s4, s5];
							s3 = s4;
						} else {
							peg$currPos = s3;
							s3 = peg$FAILED;
						}
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
				}
				if (s2 !== peg$FAILED) {
					peg$savedPos = s0;
					s1 = peg$c4(s1, s2);
					s0 = s1;
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}

			return s0;
		}

		function peg$parseTerm2() {
			var s0, s1, s2, s3, s4, s5;

			s0 = peg$currPos;
			s1 = peg$parseTerm3();
			if (s1 !== peg$FAILED) {
				s2 = [];
				s3 = peg$currPos;
				if (input.substr(peg$currPos, 2) === peg$c11) {
					s4 = peg$c11;
					peg$currPos += 2;
				} else {
					s4 = peg$FAILED;
					if (peg$silentFails === 0) { peg$fail(peg$c12); }
				}
				if (s4 === peg$FAILED) {
					if (input.substr(peg$currPos, 2) === peg$c13) {
						s4 = peg$c13;
						peg$currPos += 2;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c14); }
					}
				}
				if (s4 !== peg$FAILED) {
					s5 = peg$parseTerm3();
					if (s5 !== peg$FAILED) {
						s4 = [s4, s5];
						s3 = s4;
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
				} else {
					peg$currPos = s3;
					s3 = peg$FAILED;
				}
				while (s3 !== peg$FAILED) {
					s2.push(s3);
					s3 = peg$currPos;
					if (input.substr(peg$currPos, 2) === peg$c11) {
						s4 = peg$c11;
						peg$currPos += 2;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c12); }
					}
					if (s4 === peg$FAILED) {
						if (input.substr(peg$currPos, 2) === peg$c13) {
							s4 = peg$c13;
							peg$currPos += 2;
						} else {
							s4 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c14); }
						}
					}
					if (s4 !== peg$FAILED) {
						s5 = peg$parseTerm3();
						if (s5 !== peg$FAILED) {
							s4 = [s4, s5];
							s3 = s4;
						} else {
							peg$currPos = s3;
							s3 = peg$FAILED;
						}
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
				}
				if (s2 !== peg$FAILED) {
					peg$savedPos = s0;
					s1 = peg$c4(s1, s2);
					s0 = s1;
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}

			return s0;
		}

		function peg$parseTerm3() {
			var s0, s1, s2, s3, s4, s5;

			s0 = peg$currPos;
			s1 = peg$parseTerm4();
			if (s1 !== peg$FAILED) {
				s2 = [];
				s3 = peg$currPos;
				if (input.substr(peg$currPos, 2) === peg$c15) {
					s4 = peg$c15;
					peg$currPos += 2;
				} else {
					s4 = peg$FAILED;
					if (peg$silentFails === 0) { peg$fail(peg$c16); }
				}
				if (s4 === peg$FAILED) {
					if (input.charCodeAt(peg$currPos) === 60) {
						s4 = peg$c17;
						peg$currPos++;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c18); }
					}
					if (s4 === peg$FAILED) {
						if (input.substr(peg$currPos, 2) === peg$c11) {
							s4 = peg$c11;
							peg$currPos += 2;
						} else {
							s4 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c12); }
						}
						if (s4 === peg$FAILED) {
							if (input.substr(peg$currPos, 2) === peg$c19) {
								s4 = peg$c19;
								peg$currPos += 2;
							} else {
								s4 = peg$FAILED;
								if (peg$silentFails === 0) { peg$fail(peg$c20); }
							}
							if (s4 === peg$FAILED) {
								if (input.charCodeAt(peg$currPos) === 62) {
									s4 = peg$c21;
									peg$currPos++;
								} else {
									s4 = peg$FAILED;
									if (peg$silentFails === 0) { peg$fail(peg$c22); }
								}
							}
						}
					}
				}
				if (s4 !== peg$FAILED) {
					s5 = peg$parseTerm4();
					if (s5 !== peg$FAILED) {
						s4 = [s4, s5];
						s3 = s4;
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
				} else {
					peg$currPos = s3;
					s3 = peg$FAILED;
				}
				while (s3 !== peg$FAILED) {
					s2.push(s3);
					s3 = peg$currPos;
					if (input.substr(peg$currPos, 2) === peg$c15) {
						s4 = peg$c15;
						peg$currPos += 2;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c16); }
					}
					if (s4 === peg$FAILED) {
						if (input.charCodeAt(peg$currPos) === 60) {
							s4 = peg$c17;
							peg$currPos++;
						} else {
							s4 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c18); }
						}
						if (s4 === peg$FAILED) {
							if (input.substr(peg$currPos, 2) === peg$c11) {
								s4 = peg$c11;
								peg$currPos += 2;
							} else {
								s4 = peg$FAILED;
								if (peg$silentFails === 0) { peg$fail(peg$c12); }
							}
							if (s4 === peg$FAILED) {
								if (input.substr(peg$currPos, 2) === peg$c19) {
									s4 = peg$c19;
									peg$currPos += 2;
								} else {
									s4 = peg$FAILED;
									if (peg$silentFails === 0) { peg$fail(peg$c20); }
								}
								if (s4 === peg$FAILED) {
									if (input.charCodeAt(peg$currPos) === 62) {
										s4 = peg$c21;
										peg$currPos++;
									} else {
										s4 = peg$FAILED;
										if (peg$silentFails === 0) { peg$fail(peg$c22); }
									}
								}
							}
						}
					}
					if (s4 !== peg$FAILED) {
						s5 = peg$parseTerm4();
						if (s5 !== peg$FAILED) {
							s4 = [s4, s5];
							s3 = s4;
						} else {
							peg$currPos = s3;
							s3 = peg$FAILED;
						}
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
				}
				if (s2 !== peg$FAILED) {
					peg$savedPos = s0;
					s1 = peg$c4(s1, s2);
					s0 = s1;
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}

			return s0;
		}

		function peg$parseTerm4() {
			var s0, s1, s2, s3, s4, s5;

			s0 = peg$currPos;
			s1 = peg$parseTerm5();
			if (s1 !== peg$FAILED) {
				s2 = [];
				s3 = peg$currPos;
				if (input.charCodeAt(peg$currPos) === 43) {
					s4 = peg$c23;
					peg$currPos++;
				} else {
					s4 = peg$FAILED;
					if (peg$silentFails === 0) { peg$fail(peg$c24); }
				}
				if (s4 === peg$FAILED) {
					if (input.charCodeAt(peg$currPos) === 45) {
						s4 = peg$c25;
						peg$currPos++;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c26); }
					}
				}
				if (s4 !== peg$FAILED) {
					s5 = peg$parseTerm5();
					if (s5 !== peg$FAILED) {
						s4 = [s4, s5];
						s3 = s4;
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
				} else {
					peg$currPos = s3;
					s3 = peg$FAILED;
				}
				while (s3 !== peg$FAILED) {
					s2.push(s3);
					s3 = peg$currPos;
					if (input.charCodeAt(peg$currPos) === 43) {
						s4 = peg$c23;
						peg$currPos++;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) { peg$fail(peg$c24); }
					}
					if (s4 === peg$FAILED) {
						if (input.charCodeAt(peg$currPos) === 45) {
							s4 = peg$c25;
							peg$currPos++;
						} else {
							s4 = peg$FAILED;
							if (peg$silentFails === 0) { peg$fail(peg$c26); }
						}
					}
					if (s4 !== peg$FAILED) {
						s5 = peg$parseTerm5();
						if (s5 !== peg$FAILED) {
							s4 = [s4, s5];
							s3 = s4;
						} else {
							peg$currPos = s3;
							s3 = peg$FAILED;
						}
					} else {
						peg$currPos = s3;
						s3 = peg$FAILED;
					}
				}
				if (s2 !== peg$FAILED) {
					peg$savedPos = s0;
					s1 = peg$c4(s1, s2);
					s0 = s1;
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}

			return s0;
		}

		function peg$parseTerm5() {
			var s0, s1, s2, s3, s4, s5;
